Реализован поиск по названию и режиссёру